--- a/.github/workflows/jira-exporter.yml
+++ b/.github/workflows/jira-exporter.yml
@@ -1,28 +1,28 @@
 # jira Exporter Workflow
-# This workflow responsible for running jira exporter.
+# This workflow is responsible for running jira exporter.
 # jira_host: The URL of your Jira, for example: https://example.atlassian.net
 # atlassian_user_email: The email of the user used to query Jira
-# atlassian_user_token: You can configure the user token on the <a target="_blank" href="https://id.atlassian.com/manage-profile/security/api-tokens">Atlassian account page</a>
+# atlassian_user_token: You can configure the user token on the Atlassian account page
 
 on:
-    workflow_dispatch:
-    schedule:
-        - cron: '*/5 * * * *' # Determines the scheduled interval for this workflow. This example runs every hour.
+  workflow_dispatch:
+  schedule:
+    - cron: '*/5 * * * *' # Runs every 5 minutes
 
 jobs:
-    run-integration:
-        runs-on: ubuntu-latest
-		timeout-minutes: 30 # Set a time limit for the job
-		
-        steps:
-            - name: Run jira Integration
-              uses: port-labs/ocean-sail@v1
-              with:
-                type: jira
-                port_client_id: ${{ secrets.PORT_CLIENT_ID }}
-                port_client_secret: ${{ secrets.PORT_CLIENT_SECRET }}
-                port_base_url: "https://api.port.io"
-                config: |
-                    jira_host: "https://emmanuell2000.atlassian.net"
-                    atlassian_user_email: ${{ secrets.atlassianUserEmail }}
-                    atlassian_user_token: ${{ secrets.atlassianUserToken }}
+  run-integration:
+    runs-on: ubuntu-latest
+    timeout-minutes: 30 # Set a time limit for the job
+
+    steps:
+      - name: Run jira Integration
+        uses: port-labs/ocean-sail@v1
+        with:
+          type: jira
+          port_client_id: ${{ secrets.PORT_CLIENT_ID }}
+          port_client_secret: ${{ secrets.PORT_CLIENT_SECRET }}
+          port_base_url: "https://api.port.io"
+          config: |
+            jira_host: "https://emmanuell2000.atlassian.net"
+            atlassian_user_email: ${{ secrets.atlassianUserEmail }}
+            atlassian_user_token: ${{ secrets.atlassianUserToken }}
