--- a/.github/workflows/jira-exporter.yml
+++ b/.github/workflows/jira-exporter.yml
@@ -6,8 +6,8 @@
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '*/5 * * * *' # Runs every 5 minutes
+  #schedule:
+    #- cron: '*/5 * * * *' # Runs every 5 minutes
 
 jobs:
   run-integration:
